<resources>
    <string name="gl_lengyun_packgename">l.gelifood.com</string>
    <string name="message_clickagainexittheapp">再次点击退出程序</string>
    <string name="load_end">———— 已加载全部 ————</string>
    <string name="permissionmessage">当前应用缺 少%1$s权限%2$s。\n
        请点击"设置"-"权限"-打开所需权限。\n
        最后点击两次后退按钮，即可返回。
    </string>
    <string name="and">和</string>
    <string name="message_not_found">资源未找到</string>
    <string name="message_internal_server_error">服务器内部错误</string>
    <string name="message_unsatisfiable_request">网关超时，服务器未响应</string>
    <string name="bad_gateway">网关错误</string>
    <string name="message_server_error">服务器错误</string>
    <string name="message_unknownhost">网络异常，请检查您的网络状态</string>
    <string name="message_sockettimeout">网络连接超时，请检查您的网络状态，稍后重试</string>
    <string name="message_connectexception">网络连接异常，请检查您的网络状态</string>
    <string name="message_data_parsing_filed">数据解析失败</string>
    <string name="message_data_read_filed">数据读取失败</string>
    <string name="message_unknown_mistake">未知错误</string>
    <string name="orderdetails_dialumber">拨打电话</string>
    <string name="permissioncallphone">用于拨打电话</string>
    <string name="htttp_requesting">网络请求中...</string>
    <string name="necessary">:必要</string>
    <string name="title_help">帮助</string>
    <string name="shplash_bottom1">好食品</string>
    <string name="shplash_bottom2">上格利</string>
    <string name="shplash_bottom3">货正</string>
    <string name="shplash_bottom4">价更低</string>
    <string name="login">登录</string>
    <string name="regist">注册</string>
    <string name="please_input_phone">请输入手机号</string>
    <string name="please_input_pass">请输入密码</string>
    <string name="please_input_nickname">请输入昵称</string>
    <string name="forgetpass">忘记密码?</string>
    <string name="login_message1">格利食品网APP与格利冷运\n帐号相互连接</string>
    <string name="please_input_code">请输入验证码</string>
    <string name="regist_message">已阅读并同意</string>
    <string name="regist_message1">《格利食品网服务协议》</string>
    <string name="regist_message2">密码由6-12位英文字母或数组组成</string>
    <string name="resetpass">重置密码</string>
    <string name="please_input_newpass">请输入新密码</string>
    <string name="please_input_newpassagain">请再次输入新密码</string>
    <string name="getcode">获取验证码</string>
    <string name="code">验证码</string>
    <string name="youphone">到您的手机</string>
    <string name="submit">提交</string>
    <string name="message_loginsuccess">登录成功</string>
    <string name="message_modifypassfaile">修改密码失败</string>
    <string name="message_modifypasssuccess">修改密码成功</string>
    <string name="message_phonenoregist">手机号码尚未注册</string>
    <string name="login_incorrectusernameorpass">账号或密码错误</string>
    <string name="message_loginfailed">登录失败,请重试</string>
    <string name="info_no_null">信息不能空</string>
    <string name="phone_matcher_failed">手机号码格式不正确</string>
    <string name="getcodeagain">重新获取</string>
    <string name="time_s">秒</string>
    <string name="message_pleasegetverificationcode">请先获取验证码</string>
    <string name="message_waitgetcode">请等待获取验证码短信</string>
    <string name="incorrect_verification_code">验证码不正确</string>
    <string name="pass_matcher_failed">密码格式不正确</string>
    <string name="plase_agree_the_agreement">请同意协议</string>
    <string name="message_registsuccess">注册成功</string>
    <string name="phone_no_null">手机号码不能为空</string>
    <string name="twopass_noequals">两次密码不一致</string>
    <string name="message_modifysuccess">修改成功</string>
    <string name="index">首页</string>
    <string name="openCamearError">打开相机出错</string>
    <string name="location_failed">定位失败</string>
    <string name="piling_center">批零中心</string>
    <string name="changjia_zhigong">厂家直供</string>
    <string name="haiwai_zhicai">海外直采</string>
    <string name="geli_lengyun">格利冷运</string>
    <string name="geli_jinrong">格利金融</string>
    <string name="logistics_transactions">交易物流</string>
    <string name="transaction_complete">交易完成</string>
    <string name="notify_center">通知中心</string>
    <string name="system_notify">系统公告</string>
    <string name="carme">相机</string>
    <string name="read">读取</string>
    <string name="scan_erweima">扫描二维码</string>
    <string name="used">用于</string>
    <string name="enter_shop">进入店铺</string>
    <string name="goodsproduct">精彩推荐</string>
    <string name="direct_brand">品牌直供</string>
    <string name="brand_street">品牌街</string>
    <string name="goodstaste">──── %s ────</string>
    <string name="newgood_sproduct">新品推荐</string>
    <string name="mayyoulike">猜你喜欢</string>
    <string name="reportshop_messagae1">店铺涉嫌刷单或刷好评</string>
    <string name="reportshop_messagae2">商品实际情况与描述有较大差别</string>
    <string name="reportshop_messagae3">门店资质存在问题</string>
    <string name="reportshop_messagae4">其他问题描述</string>
    <string name="reportshop_inputhint">如有问题,请描述详细情况~</string>
    <string name="release">发布</string>
    <string name="release_success">发布成功</string>
    <string name="comment_success">评论成功</string>
    <string name="permissionreadalbum">用于选择相册</string>
    <string name="save_photo">用于保存图片</string>
    <string name="message_readalbum">读取相册</string>
    <string name="uploadimg">上传图片</string>
    <string name="uploadimg3">上传图片(可选三张)</string>
    <string name="shopdetails_bottomtoast">上滑继续购物</string>
    <string name="navigation">导航</string>
    <string name="call_server">联系客服</string>
    <string name="chilled_level">冰鲜程度</string>
    <string name="shopdetails_centercoupon">中心优惠券</string>
    <string name="shopdetails_centercomment">中心评价</string>
    <string name="service_attitude">服务程度</string>
    <string name="logistics_speed">物流速度</string>
    <string name="check_allcomment">查看全部评论</string>
    <string name="shopdetails_centerinfo">中心信息</string>
    <string name="shopdetails_ordernumber">订单总数:%s单</string>
    <string name="shopdetails_monthlyordernumber">月销单量:%s单</string>
    <string name="shopdetails_centeraddress">中心地址:%s</string>
    <string name="shopdetails_centerphone">中心电话:%s</string>
    <string name="shopdetails_centerintro">中心介绍</string>
    <string name="shopdetails_reprotcenter">举报中心</string>
    <string name="shopdetails_qualifications">中心资质</string>
    <string name="please_input_search_goodsorcenter">请输入商品或中心名称</string>
    <string name="origin">产地:%s</string>
    <string name="factory_qualifications">厂家资质</string>
    <string name="delegation_personnumber">已参团%s人</string>
    <string name="remaining_ton">剩余%1$s%2$s</string>
    <string name="overseas_list_money">￥%s</string>
    <string name="start_money">￥%s起</string>
    <string name="money_unit">￥</string>
    <string name="select_specifi">选规格</string>
    <string name="specifi">规格</string>
    <string name="please_input_search_goodsorshop">请输入商品或店铺名称</string>
    <string name="enter_center">进入中心</string>
    <string name="shop">店铺</string>
    <string name="goods">商品</string>
    <string name="group_buy">团购</string>
    <string name="futures">期货</string>
    <string name="spot">现货</string>
    <string name="delete">删除</string>
    <string name="smallcart_goodslist">商品清单</string>
    <string name="clert_cart">清空购物车</string>
    <string name="free_shipping">不含运费</string>
    <string name="settlement">结算(%s)</string>
    <string name="please_select_address">请选择地址</string>
    <string name="paymethod">支付方式</string>
    <string name="wechat_pay">微信支付</string>
    <string name="geli_pay">格利支付系统</string>
    <string name="ali_pay">支付宝</string>
    <string name="ali_pay1">支付宝支付</string>
    <string name="linedown_pay">线下支付</string>
    <string name="transfer_accounts_pay">转账支付</string>
    <string name="wallet_pay">钱包支付</string>
    <string name="delivery_method">配送方式</string>
    <string name="zixing_tihuo">自行提货</string>
    <string name="whether_delivery">是否送货上门</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="main_line_money">干线费</string>
    <string name="delivery_money">配送费</string>
    <string name="delivery_total_price">运费总价</string>
    <string name="whether_invoice">是否选择发票</string>
    <string name="submit_order">提交订单</string>
    <string name="total">合计:</string>
    <string name="overseas_delegation_rule">海外直采—拼单参团规则</string>
    <string name="contact_service">联系客服</string>
    <string name="contact_shop">联系商家</string>
    <string name="person_comment">用户评论(%s)</string>
    <string name="goodsdetails_totas">— 商品详情 —</string>
    <string name="add_cart">加入购物车</string>
    <string name="cart">购物车</string>
    <string name="unit_tax_number">单位税号: %s</string>
    <string name="unit_address">单位地址: %s</string>
    <string name="unit_banks">开户银行: %s</string>
    <string name="unit_bank">开户银行:</string>
    <string name="email">电子邮箱: %s</string>
    <string name="phone">联系电话: %s</string>
    <string name="add_invoice">添加发票</string>
    <string name="click_nouse_invoice">点击将不使用发票</string>
    <string name="manager">管理</string>
    <string name="complete">完成</string>
    <string name="completed">已完成</string>
    <string name="can_use_couponnumber">可用优惠券(%s)张</string>
    <string name="buyer_message">买家留言:</string>
    <string name="buyer_message1">对商品有什么要求等等都可以进行文字说明</string>
    <string name="total_goods_number">共%1$s%2$s商品</string>
    <string name="can_use_coupon">可用优惠券</string>
    <string name="can_notuse_coupon">不可用优惠券</string>
    <string name="expired_coupon">已过期</string>
    <string name="shipping_address">收货地址: %s</string>
    <string name="shipping_address1">收货地址</string>
    <string name="default_address">默认地址</string>
    <string name="add_address">添加地址</string>
    <string name="mine_order">我的订单</string>
    <string name="check_all_order">查看全部订单</string>
    <string name="check_details">查看详情</string>
    <string name="pre_payment">待付款</string>
    <string name="to_be_delivered">待发货</string>
    <string name="to_be_received">待收货</string>
    <string name="be_evaluated">待评价</string>
    <string name="aftermarket">售后</string>
    <string name="apply_for_after_sales">申请售后</string>
    <string name="to_accept">待受理</string>
    <string name="in_the_processing">受理中</string>
    <string name="after_complete">售后完成</string>
    <string name="after_sales_progress">售后进度</string>
    <string name="member_centre">会员中心</string>
    <string name="my_coupon">我的优惠券</string>
    <string name="invoice_merge">合并开票</string>
    <string name="invoice_application">发票申请</string>
    <string name="invoice_record">发票记录</string>
    <string name="my_invoice">我的发票</string>
    <string name="address_manager">地址管理</string>
    <string name="my_collection">我的收藏</string>
    <string name="browsing_history">浏览记录</string>
    <string name="view_number">浏览次数</string>
    <string name="helper_center">帮助中心</string>
    <string name="feedback">意见反馈</string>
    <string name="goodscomment_inputhint">食品满足您的期待吗?说说您的食用心得,分享给同样想购买的他们吧~</string>
    <string name="food_rating">食品评分</string>
    <string name="very_satisfied">非常满意</string>
    <string name="all_select">全选</string>
    <string name="submit_order_success">提交成功!</string>
    <string name="tips">温馨提示</string>
    <string name="submit_order_success_mess2">2.如果有疑问的话，可以找我们客服小专员的，客服热线：</string>
    <string name="geli_phone">020-81338860</string>
    <string name="my_order">我的订单</string>
    <string name="return_index">返回首页</string>
    <string name="contact_customer_service_time">联系客服时间 9:00-18:00</string>
    <string name="pay_method">支付方式:</string>
    <string name="amounts_payable">应付金额:</string>
    <string name="unit_name">开户名称:</string>
    <string name="unit_account">开户帐号:</string>
    <string name="copy">复制</string>
    <string name="submit_order_success_linedownmess1">1.您必须在两天内向该帐号汇款转账并提交转账凭证，不然将会自动取消该单喔</string>
    <string name="submit_order_success_linedownmess2">2.您需要提交有效的转账凭证，不然同样会自动取消该订单的。</string>
    <string name="cancel">取消</string>
    <string name="update_dialog">更新提示</string>
    <string name="update_message">新版本来袭，超强功能版本更新，等你来体验。</string>
    <string name="update_experience">立即体验</string>
    <string name="bank_transfer">银行转账</string>
</resources>