<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include layout="@layout/include_title"></include>
        <TextView android:id="@+id/tv_ordersubmit_success" android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_horizontal"
                  android:layout_marginBottom="15dp"
                  android:layout_marginTop="15dp"
                  android:drawableLeft="@drawable/icon_tijiaochenggong80"
                  android:drawablePadding="10dp"
                  android:gravity="center_vertical"
                  android:text="@string/submit_order_success"
                  android:textColor="@color/zhusediao"
                  android:textSize="28sp"/>
        <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/shadow_radius2"
                        android:padding="15dp">
            <TextView android:id="@+id/tv_linedownsubmitordersucc_paymethod"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:drawableLeft="@drawable/redyuan_7r_shape"
                      android:drawablePadding="5dp"
                      android:text="@string/pay_method"
                      android:textColor="@color/specifitext_color"/>
            <TextView android:id="@+id/tv_linedownsubmitordersucc_money"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_below="@id/tv_linedownsubmitordersucc_paymethod"
                      android:layout_marginTop="15dp"
                      android:drawableLeft="@drawable/redyuan_7r_shape"
                      android:drawablePadding="5dp"
                      android:text="@string/amounts_payable"
                      android:textColor="@color/specifitext_color"/>
            <TextView android:id="@+id/tv_linedownsubmitordersucc_unitbank"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_below="@id/tv_linedownsubmitordersucc_money"
                      android:layout_marginTop="15dp"
                      android:drawableLeft="@drawable/redyuan_7r_shape"
                      android:drawablePadding="5dp"
                      android:text="@string/unit_bank"
                      android:textColor="@color/specifitext_color"/>
            <TextView android:id="@+id/tv_linedownsubmitordersucc_unitname"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_below="@id/tv_linedownsubmitordersucc_unitbank"
                      android:layout_marginTop="15dp"
                      android:drawableLeft="@drawable/redyuan_7r_shape"
                      android:drawablePadding="5dp"
                      android:text="@string/unit_name"
                      android:textColor="@color/specifitext_color"/>
            <TextView android:id="@+id/tv_linedownsubmitordersucc_unitaccount"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_below="@id/tv_linedownsubmitordersucc_unitname"
                      android:layout_marginTop="15dp"
                      android:drawableLeft="@drawable/redyuan_7r_shape"
                      android:drawablePadding="5dp"
                      android:text="@string/unit_account"
                      android:textColor="@color/specifitext_color"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:layout_marginLeft="20dp"
                      android:layout_toRightOf="@id/tv_linedownsubmitordersucc_paymethod"
                      android:text="@string/bank_transfer"/>
            <TextView android:id="@+id/tv_linedown_suborder_price"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_below="@id/tv_linedownsubmitordersucc_paymethod"
                      android:layout_marginLeft="20dp"
                      android:layout_marginTop="15dp"
                      android:layout_toRightOf="@id/tv_linedownsubmitordersucc_money"
                      tools:text="@string/overseas_list_money"/>
            <TextView android:id="@+id/tv_linedown_suborder_bank"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_below="@id/tv_linedownsubmitordersucc_money"
                      android:layout_marginLeft="20dp"
                      android:layout_marginTop="15dp"
                      android:layout_toRightOf="@id/tv_linedownsubmitordersucc_unitbank"
                      tools:text="@string/overseas_list_money"/>
            <TextView android:id="@+id/tv_linedown_suborder_bankname"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_below="@id/tv_linedownsubmitordersucc_unitbank"
                      android:layout_marginLeft="20dp"
                      android:layout_marginTop="15dp"
                      android:layout_toRightOf="@id/tv_linedownsubmitordersucc_unitname"
                      tools:text="@string/overseas_list_money"/>
            <TextView android:id="@+id/tv_linedown_suborder_banknumber"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_below="@id/tv_linedownsubmitordersucc_unitname"
                      android:layout_marginLeft="20dp"
                      android:layout_marginTop="15dp"
                      android:layout_toRightOf="@id/tv_linedownsubmitordersucc_unitaccount"
                      tools:text="@string/overseas_list_money"/>
            <TextView android:id="@+id/tv_linedown_suborder_copy"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_alignParentRight="true"
                      android:background="@drawable/bordergray1dp_2r_shape"
                      android:paddingBottom="4dp"
                      android:paddingLeft="11dp"
                      android:paddingRight="11dp"
                      android:paddingTop="4dp"
                      android:text="@string/copy"
                      android:textSize="12sp"/>
        </RelativeLayout>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:layout_marginBottom="10dp"
                  android:layout_marginLeft="15dp"
                  android:layout_marginTop="15dp"
                  android:drawableLeft="@drawable/icon_tishi"
                  android:drawablePadding="5dp"
                  android:text="@string/tips"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:layout_marginLeft="15dp"
                  android:layout_marginRight="15dp"
                  android:text="@string/submit_order_success_linedownmess1"
                  android:textSize="12sp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:layout_marginLeft="15dp"
                  android:layout_marginRight="15dp"
                  android:layout_marginTop="10dp"
                  android:text="@string/submit_order_success_linedownmess2"
                  android:textSize="12sp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:layout_marginLeft="15dp"
                  android:layout_marginRight="15dp"
                  android:layout_marginTop="10dp"
                  android:text="@string/submit_order_success_mess2"
                  android:textSize="12sp"/>
        <TextView android:id="@+id/tv_submitordersuccess_phone" android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="15dp"
                  android:layout_marginTop="10dp"
                  android:background="@drawable/linered1dp_bottom_list"
                  android:text="@string/geli_phone"
                  android:textColor="@color/zhusediao"
                  android:textSize="12sp"/>
        <Button android:id="@+id/bt_submitordersucccess_myorder" style="@style/MyButton"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:background="@drawable/bgred_20r_shape"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/my_order"
                android:textColor="@color/white"/>
        <Button android:id="@+id/bt_submitordersucccess_index" style="@style/MyButton"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@drawable/borderred1dp_20r_shap"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/return_index"
                android:textColor="@color/zhusediao"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:layout_gravity="center_horizontal"
                  android:layout_marginBottom="15dp"
                  android:layout_marginTop="80dp"
                  android:gravity="bottom"
                  android:text="@string/contact_customer_service_time"
                  android:textSize="12sp"/>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>